--- a/Halforbit.RecordStreams.BlobStorage/Halforbit.RecordStreams.BlobStorage.csproj
+++ b/Halforbit.RecordStreams.BlobStorage/Halforbit.RecordStreams.BlobStorage.csproj
@@ -8,10 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AsyncEnumerator" Version="2.2.1" />
+    <PackageReference Include="AsyncEnumerator" Version="3.0.2-beta" />
     <PackageReference Include="Halforbit.Facets" Version="1.0.37" />
     <PackageReference Include="Halforbit.ObjectTools" Version="1.0.21" />
-    <PackageReference Include="System.IO.Pipelines" Version="4.5.2" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview5.19224.8" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
