--- a/Halforbit.RecordStreams/Halforbit.RecordStreams.csproj
+++ b/Halforbit.RecordStreams/Halforbit.RecordStreams.csproj
@@ -8,11 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AsyncEnumerator" Version="2.2.1" />
+    <PackageReference Include="AsyncEnumerator" Version="3.0.2-beta" />
     <PackageReference Include="Halforbit.Facets" Version="1.0.37" />
     <PackageReference Include="Newtonsoft.Json" Version="9.0.1" />
     <PackageReference Include="SharpCompress" Version="0.22.0" />
-    <PackageReference Include="System.IO.Pipelines" Version="4.5.2" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview5.19224.8" />
     <PackageReference Include="System.Memory" Version="4.5.1" />
   </ItemGroup>
 
